# skia-c-api

./: .gitignore  CMakeLists.txt  README.md  flake.nix  skia-129-modified.nix
cbits/fake_headers/src/base/: SkTInternalLList.h
cbits/fake_headers/src/core/: SkTHash.h
cbits/skia_capi/: gr_context.h  sk_canvas.h  sk_font.h  sk_general.h  sk_typeface.h  sk_types.h  skottie_animation.h  skparagraph.h  sksvg.h
cbits/src/: assert_enum_values.cpp  assert_struct_sizeof.cpp  common_include_pch.hpp  gr_context.cpp  sk_bitmap.cpp  sk_blender.cpp  sk_canvas.cpp  sk_codec.cpp  sk_color.cpp  sk_colorspace.cpp  sk_drawable.cpp  sk_fontmgr.cpp  sk_general.cpp  sk_graphics.cpp  sk_imagefilter.cpp  sk_maskfilter.cpp  sk_paint.cpp  sk_pixmap.cpp  sk_string.cpp  sk_surface.cpp  sk_svg.cpp  sk_vertices.cpp  skresources_resource_provider.cpp  sksvg.cpp  skunicode.cpp
cbits_cmake/: CMakeLists.txt  README.md
fake_headers/include/private/base/: SkAPI.h  SkAssert.h
fake_headers/src/core/: SkChecksum.h
skia_capi/: sk_color.h  sk_document.h  sk_fontmgr.h  sk_textblob.h  skunicode.h
src/: sk_colorfilter.cpp  sk_data.cpp  sk_document.cpp  sk_font.cpp  sk_image.cpp  sk_matrix.cpp  sk_path.cpp  sk_patheffect.cpp  sk_picture.cpp  sk_region.cpp  sk_rrect.cpp  sk_runtimeeffect.cpp  sk_shader.cpp  sk_stream.cpp  sk_textblob.cpp  sk_typeface.cpp  sk_types_priv.hpp  skottie_animation.cpp  skparagraph.cpp  sksg_invalidation_controller.cpp
